<resources>
    <string name="app_name">TaskApp</string>

    <!--Login Fragment -->
    <string name="email">E-mail</string>
    <string name="login_edt_email">Preencha o e-mail</string>
    <string name="edt_password">Senha</string>
    <string name="hint_password"> Escreva a senha</string>
    <string name="login">Login</string>
    <string name="text_button_create_account">Criar conta</string>
    <string name="reccouver_account">Recuperar conta</string>
    <string name="reccouver_account_email">Informe seu e-mail.</string>

    <!--Generics -->
    <string name="msg_toastok">Tudo certo!</string>
    <string name="msg_toast_save">Salvo com sucesso!</string>
    <string name="msg_toast_password">Preencha sua senha!</string>
    <string name="msg_toast_email">Preencha seu email!</string>
    <string name="msg_toastpassword_lenght">"Insira uma senha no min 6 caracteres"</string>
    <string name="attention">Atenção</string>
    <string name="notice">Noticia</string>
    <string name="Ok">Ok</string>
    <string name="btn_save">Salvar</string>
    <string name="btn_send">Enviar</string>
    <string name="btn_ok">Ok</string>
    <string name="error">Erro</string>
    <string name="text_list_task_empty">Nehuma tarefa cadastrada.</string>
    <string name="text_list_task_load">Aguarde, estamos carregando as informações.</string>
    <string name="text_list_task_delete">Tarefa, deletada com sucesso.</string>
    <string name="text_list_task_save">Tarefa, salva com sucesso.</string>
    <string name="text_button_dialog_confirm">Confirmar</string>
    <string name="text_title_dialog_delete">Deseja remover esta tarefa?</string>
    <string name="text_message_dialog_delete">Aperte em confirmar para remover a tarefa.</string>

    <!--Register Fragment -->
    <string name="register_frag_title">Insira os dados de usuário</string>
    <string name="edt_name">Preencha seu nome</string>
    <string name="edt_age">Insira sua idade</string>
    <string name="btn_register">Registrar</string>
    <string name="btn_back">Voltar</string>
    <string name="password">Senha</string>
    <string name="age">Idade</string>
    <string name="btn_show">Show</string>


    <!--Form Task Fragment -->
    <string name="btn_view">View</string>
    <string name="senha">Senha</string>
    <string name="name">Nome</string>
    <string name="hint_name">Escreva o nome</string>
    <string name="status">Status</string>
    <string name="description">Descrição</string>
    <string name="hint_description">Escreva uma descrição</string>
    <string name="status_task_todo">A fazer</string>
    <string name="status_task_doing">Fazendo</string>
    <string name="status_task_done">Feito</string>
    <string name="status_task_made">Made</string>
    <string name="email_empty_formtask_fragment">Preencha seu e-mail</string>
    <string name="password_empty_formtask_fragment">Preencha uma senha</string>
    <string name="new_task">Nova tarefa</string>
    <string name="text_update_task_formtask_fragment">Tarefa atualizada com sucesso!</string>

    <!--Recover Task Fragment -->
    <string name="text_recovery">Insira seu email cadastrado para recuperar a senha</string>
    <string name="text_recoverry_account">Recuperar conta</string>
    <string name="text_message_recover_account_fragment">Pronto, link de recuperação enviado para seu e-mail!</string>
    <string name="email_empty_register_fragment">Preencha seu e-mail</string>
    <string name="text_empty_recover_fragment">Preencha seu e-mail</string>
    <!--Recover Task Fragment -->


    <!--Login Fragment -->
    <string name="text_warning">Entendi</string>
    <string name="text_button">Ok</string>
    <string name="text_message">Insira seu email</string>
    <string name="btn_remove">Remover</string>
    <string name="btn_editar">Editar</string>
    <string name="btn_details">Detalhes</string>
    <string name="hello_blank_fragment">Detalhes</string>
    <string name="create_account">create account</string>
    <!--Login Fragment -->


    <!--Home Fragment -->
    <string name="text_title_dialog_confirm_logout">Deseja sair?</string>
    <string name="text_button_dialog_confirm_logout">Confirmar</string>
    <string name="text_message_dialog_confirm_logout">Aperte em confirmar para sair da sua conta</string>
    <!--Home Fragment -->


    <!--Erros Firebase -->
    <string name="account_not_registered_register_fragment">Nenhuma conta encontrada com este e-mail.</string>
    <string name="invalid_email_register_fragment">Insira um e-amil válido</string>
    <string name="invalid_password_register_fragment">Senha inválida, tente novamente.</string>
    <string name="email_in_use_register_fragment">Este e-mail já está em uso.</string>
    <string name="strong_password_register_fragment">Insira uma senha mais forte.</string>
    <!--Erros Firebase -->



</resources>