<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".auth.RegisterFragment">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/color_default"
            tools:ignore="ExtraText">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_default">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_default"
                app:navigationIcon="@drawable/ic_back_white">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_button_create_account"
                    style="@style/WhiteText"
                    android:layout_marginStart="20dp"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/white" />


            </com.google.android.material.appbar.MaterialToolbar>

            </com.google.android.material.appbar.AppBarLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_nameApp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_frag_title"
                style="@style/WhiteTextBold"
                android:layout_marginTop="30dp"
                android:layout_gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                style="@style/WhiteText"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_gravity="start" />


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_Name"
                style="@style/EditTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/hint_name"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textColorHint="#2E7D32"
                tools:ignore="Autofill" />



            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                style="@style/WhiteText"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_gravity="start"
                android:textColor="@color/white" />


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_edt_email"
                android:inputType="textEmailAddress"
                style="@style/EditTextTheme"
                android:gravity="start"
                android:padding="15dp"
                android:background="@drawable/bg_edit_text"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                tools:ignore="VisualLintTextFieldSize" />

            <!--        android:drawableLeft="@drawable/ic_launcher_foreground"--> />



            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                style="@style/WhiteText"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_gravity="start"
                android:textColor="@color/white" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_password"
                    style="@style/EditTextTheme"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_edit_text"
                    android:drawableStart="@drawable/ic_password"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:padding="15dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/showHideBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:text="@string/btn_show"
                    style="@style/ButtonTheme"
                    app:iconTint="@color/color_default"
                    tools:ignore="VisualLintButtonSize" />

            </LinearLayout>



            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"
                style="@style/WhiteText"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="start"
                android:textColor="@color/white" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edt_age"
                style="@style/EditTextTheme"
                android:inputType="number"
                android:padding="15dp"
                android:background="@drawable/bg_edit_text"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:icon="@drawable/ic_register"
                style="@style/ButtonTheme"
                android:text="@string/btn_register"
                app:iconTint="@color/color_default"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/bg_btn"
                style="@style/ButtonTheme"
                android:text="@string/btn_back"
                app:icon="@drawable/ic_arrow_back"
                app:iconTint="@color/color_default"/>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:layout_gravity="center"
                android:indeterminateTint="@color/white"></ProgressBar>


        </androidx.appcompat.widget.LinearLayoutCompat>


    </ScrollView>
