<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.FormTaskFragment">

<androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_back_white">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_task"
                style="@style/WhiteText"
                android:layout_marginStart="20dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/white" />


        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/color_default">



        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            style="@style/WhiteText"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="start"
       />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_Description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/description"
            android:inputType="text"
            android:maxLines="1"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            tools:ignore="Autofill,DuplicateSpeakableTextCheck" />


        <!--        android:drawableLeft="@drawable/ic_launcher_foreground"--> />



        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            style="@style/WhiteText"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="start"
            android:textColor="@color/white" />


        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbTodo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_task_todo"
                android:buttonTint="@color/white"
                android:textColor="@color/white"
                android:checked="true"
                android:layout_marginStart="20dp"
                />

            <RadioButton
                android:id="@+id/rbDoing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_task_doing"
                android:buttonTint="@color/white"
                android:textColor="@color/white"
                android:layout_marginStart="20dp"
                />

            <RadioButton
                android:id="@+id/rbDone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_task_done"
                android:buttonTint="@color/white"
                android:textColor="@color/white"
                android:layout_marginStart="20dp"
                />

        </RadioGroup>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textAllCaps="false"
            android:textColor="@color/color_default"
            app:icon="@drawable/ic_register"
            app:backgroundTint="@null"
            android:background="@drawable/bg_btn"
            android:text="@string/btn_save"
            app:iconTint="@color/color_default"
            />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTint="@color/white"></ProgressBar>


    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>


</ScrollView>
