<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/color_default"
    tools:context=".auth.RecoverAccountFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="ExtraText">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_default"

            >

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_default"
                app:navigationIcon="@drawable/ic_back_white">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reccouver_account"
                    android:layout_gravity="center"
                    style="@style/WhiteText" />


            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <!--        android:drawableLeft="@drawable/ic_launcher_foreground"--><![CDATA[ />


        ]]>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_recovery"
            style="@style/WhiteText"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="start" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_recover_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_edt_email"
            android:inputType="text"
            style="@style/EditTextTheme"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_recover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/bg_btn"
            android:text="@string/btn_send"
            android:textColor="#2E7D32"
            app:backgroundTint="@null" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTint="@color/white"></ProgressBar>



    </androidx.appcompat.widget.LinearLayoutCompat>


</ScrollView>



