<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/cardview_dark_background"
        tools:context=".MainActivity">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_nameApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/EditTextTheme"
            android:hint="@string/edt_name"
            android:maxLines="1"
            android:inputType="text"
            android:padding="15dp"
            android:background="@color/white"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            tools:ignore="Autofill" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:gravity="start"
            android:padding="15dp"
            style="@style/EditTextTheme"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:background="@color/white"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp" />

        <!--        android:drawableLeft="@drawable/ic_launcher_foreground"--> />


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_password"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:hint="@string/edt_password"
                android:inputType="textPassword"
                style="@style/EditTextTheme"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_password"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:layout_marginTop="30dp"
                android:layout_marginStart="20dp"
                />

            <Button
                android:id="@+id/showHideBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:text="Show"/>

        </LinearLayout>


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edt_age"
            style="@style/EditTextTheme"
            android:inputType="number"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:icon="@drawable/ic_register"
            android:text="@string/btn_register" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:text="@string/btn_back"
            app:icon="@drawable/ic_arrow_back" />



    </androidx.appcompat.widget.LinearLayoutCompat>


</ScrollView>